metadata/force-app/main/default/objects/Lead/fields/account6QA6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>account6QA6sense_Bynder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The 6QA status of the account for the product.

The values are either:

1 = 6QA
0= Not 6QA</description>
    <label>6sense Account 6QA Bynder</label>
    <type>Checkbox</type>
</CustomField>