metadata/force-app/main/default/objects/Lead/fields/accountProfileScore6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>accountProfileScore6sense_Bynder__c</fullName>
    <description>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</description>
    <label>6sense Account Profile Score Bynder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>