metadata/force-app/main/default/objects/Lead/fields/accountReachScore6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>accountReachScore6sense_Bynder__c</fullName>
    <description>6sense’s current assessment of your team&apos;s outreach on the account in comparison to the other accounts where opportunities were won previously.</description>
    <label>6sense Account Numerical Reach Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>