metadata/force-app/main/default/objects/Lead/fields/Acquian_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Acquian_Email_Address__c</fullName>
    <description>Webdam fields</description>
    <label>Partner Email Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>