metadata/force-app/main/default/objects/Lead/fields/Active_User_First_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_User_First_Lead_Owner__c</fullName>
    <description>Indicates whether the current user is the first lead owner or not. Used for the reporting.</description>
    <formula>IF(First_Lead_Owner__c = $User.FirstName + &quot; &quot; + $User.LastName, 1, 0)</formula>
    <label>Active User First Lead Owner?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>