metadata/force-app/main/default/objects/Lead/fields/Active_User_Owner__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Owner__c</fullName>
    <description>Indicates whether the current user is the lead owner or not. Used for reporting.</description>
    <formula>IF(OwnerId=$User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User Lead Owner?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>