metadata/force-app/main/default/objects/Lead/fields/All_URL__c.field-meta.xml
<CustomField>
    <fullName>All_URL__c</fullName>
    <label>All URL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>