metadata/force-app/main/default/objects/Lead/fields/Asset_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>Asset_Downloaded__c</fullName>
    <description>This field is based on the Pardot field - &quot;Asset Downloaded&quot;</description>
    <label>Asset Downloaded</label>
    <length>200</length>
    <type>Text</type>
</CustomField>