metadata/force-app/main/default/objects/Lead/fields/BDR_Completed__c.field-meta.xml
<CustomField>
    <fullName>BDR_Completed__c</fullName>
    <label>Completed Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>