metadata/force-app/main/default/objects/Lead/fields/Behavioral_Drift_Content__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Drift_Content__c</fullName>
    <label>Behavioral Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More info requested</fullName>
            </value>
            <value>
                <fullName>End WP download</fullName>
            </value>
            <value>
                <fullName>Mid WP download</fullName>
            </value>
            <value>
                <fullName>Top WP download</fullName>
            </value>
            <value>
                <fullName>CS download</fullName>
            </value>
            <value>
                <fullName>Forrester Wave 2022</fullName>
            </value>
            <value>
                <fullName>Forrester Wave 2024</fullName>
            </value>
            <value>
                <fullName>&lt;30 behavioral</fullName>
            </value>
            <value>
                <fullName>HIT Whitepaper Download</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>