metadata/force-app/main/default/objects/Lead/fields/bizible2__Marketing_Channel_FT__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Marketing_Channel_FT__c</fullName>
    <description>Type of marketing activity</description>
    <inlineHelpText>Type of marketing activity</inlineHelpText>
    <label>Marketing Channel (FT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>