metadata/force-app/main/default/objects/Lead/fields/Budget_for_DAM_Project__c.field-meta.xml
<CustomField>
    <fullName>Budget_for_DAM_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used by BDRs for lead qualification</description>
    <inlineHelpText>Field used by BDRs for lead qualification</inlineHelpText>
    <label>Budget for DAM/Project</label>
    <type>Checkbox</type>
</CustomField>