metadata/force-app/main/default/objects/Lead/fields/Business_Hours_MQL_till_Fist_Activity__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_MQL_till_Fist_Activity__c</fullName>
    <description>BODEV-341: Field to store business hours between Timestamp MQL and Timestamp First Activity. This field is updated by Main Process - Lead.</description>
    <inlineHelpText>Field to store business hours between Timestamp MQL and Timestamp First Activity.</inlineHelpText>
    <label>Business Hours: MQL till Fist Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>