metadata/force-app/main/default/objects/Lead/fields/cbit_Clearbit_Company_City__c.field-meta.xml
<CustomField>
    <fullName>cbit_Clearbit_Company_City__c</fullName>
    <description>BODEV-2808 Clearbit Enrich - Field Creation</description>
    <label>Clearbit Company City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>