metadata/force-app/main/default/objects/Lead/fields/cbit_Employees__c.field-meta.xml
<CustomField>
    <fullName>cbit_Employees__c</fullName>
    <description>BODEV-2808 Clearbit Enrich - Field Creation</description>
    <label>Clearbit Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>