metadata/force-app/main/default/objects/Lead/fields/Clearbit_Annual_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Annual_Revenue_Range__c</fullName>
    <label>Clearbit Annual Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clearbit_Annual_Revenue_Range</valueSetName>
    </valueSet>
</CustomField>