metadata/force-app/main/default/objects/Lead/fields/Company_Size_New__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_New__c</fullName>
    <label>Company Size New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company_Size</valueSetName>
    </valueSet>
</CustomField>