metadata/force-app/main/default/objects/Lead/fields/Compelling_event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used by BDRs for lead qualification</description>
    <inlineHelpText>Field used by BDRs for lead qualification</inlineHelpText>
    <label>Compelling event</label>
    <type>Checkbox</type>
</CustomField>