metadata/force-app/main/default/objects/Lead/fields/CTA_Drift_Content__c.field-meta.xml
<CustomField>
    <fullName>CTA_Drift_Content__c</fullName>
    <label>CTA Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Pricing Request</fullName>
            </value>
            <value>
                <fullName>Callback Request</fullName>
            </value>
            <value>
                <fullName>&lt;30 employee pricing request</fullName>
            </value>
            <value>
                <fullName>&lt;30 employee demo request</fullName>
            </value>
            <value>
                <fullName>Content Workflow Demo</fullName>
            </value>
            <value>
                <fullName>Content Workflow Request</fullName>
                <isActive>false</isActive>
                <label>Content Workflow Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>