metadata/force-app/main/default/objects/Lead/fields/Customer_owned_pain_points_regarding_DAM__c.field-meta.xml
<CustomField>
    <fullName>Customer_owned_pain_points_regarding_DAM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by BDRs for lead qualification</description>
    <inlineHelpText>Used by BDRs for lead qualification.</inlineHelpText>
    <label>Customer-owned pain points regarding DAM</label>
    <type>Checkbox</type>
</CustomField>