metadata/force-app/main/default/objects/Lead/fields/CW_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CW_Account_ID__c</fullName>
    <description>Used to store the CW Accout ID as part of GC Brand Consolidation</description>
    <label>CW Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>