metadata/force-app/main/default/objects/Lead/fields/CW_Demo_Request__c.field-meta.xml
<CustomField>
    <fullName>CW_Demo_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BO-1759: Used to differentiate the sign-up and trigger the right follow-up for CW standalone Trial.</description>
    <label>CW Demo Request</label>
    <type>Checkbox</type>
</CustomField>