metadata/force-app/main/default/objects/Lead/fields/CW_Techstack__c.field-meta.xml
<CustomField>
    <fullName>CW_Techstack__c</fullName>
    <description>BO-1759: Used to capture the qualification questions as part of CW standalone Trial demo flow.</description>
    <label>What is your current tech stack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>