metadata/force-app/main/default/objects/Lead/fields/CW_Trial_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CW_Trial_End_Date__c</fullName>
    <description>Used to store the End date of the Content Workflow trial request.</description>
    <formula>CW_Trial_Start_Date__c +14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CW Trial End Date</label>
    <type>Date</type>
</CustomField>