metadata/force-app/main/default/objects/Lead/fields/CW_Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CW_Trial_Start_Date__c</fullName>
    <description>Used to store the start date of the Content Workflow trial request.</description>
    <label>CW Trial Start Date</label>
    <type>Date</type>
</CustomField>