metadata/force-app/main/default/objects/Lead/fields/CW_URL__c.field-meta.xml
<CustomField>
    <fullName>CW_URL__c</fullName>
    <description>Used to store the CW URL as part of GC Brand Consolidation</description>
    <label>CW URL</label>
    <type>Url</type>
</CustomField>