metadata/force-app/main/default/objects/Lead/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Date</label>
    <type>DateTime</type>
</CustomField>