metadata/force-app/main/default/objects/Lead/fields/days_created_ago__c.field-meta.xml
<CustomField>
    <fullName>days_created_ago__c</fullName>
    <description>Number of days ago the leads was created</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <inlineHelpText>Number of days ago the leads was created</inlineHelpText>
    <label># days created ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>