metadata/force-app/main/default/objects/Lead/fields/Days_since_last_activity__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_activity__c</fullName>
    <formula>TODAY() - LastActivityDate</formula>
    <label>Days since last activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>