metadata/force-app/main/default/objects/Lead/fields/Days_Since_MQL__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_MQL__c</fullName>
    <formula>TODAY() - DATEVALUE( Timestamp_MQL__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since MQL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>