metadata/force-app/main/default/objects/Lead/fields/Days_to_MQL__c.field-meta.xml
<CustomField>
    <fullName>Days_to_MQL__c</fullName>
    <description>Number of days between Lead Created Date and Timestamp MQL</description>
    <formula>DATEVALUE(Timestamp_MQL__c) - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to MQL</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>