metadata/force-app/main/default/objects/Lead/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <inlineHelpText>Who are involved in the decision process? What will be the most important factors for the final decision?</inlineHelpText>
    <label>Decision</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>