metadata/force-app/main/default/objects/Lead/fields/Discovery_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Call_Date__c</fullName>
    <description>Indicates due date of the latest booked discovery call.</description>
    <label>Discovery Call Date</label>
    <type>Date</type>
</CustomField>