metadata/force-app/main/default/objects/Lead/fields/Do_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Emails, Filled by Pardot</description>
    <inlineHelpText>Marketing Emails, Filled by Pardot</inlineHelpText>
    <label>Do Not Email</label>
    <type>Checkbox</type>
</CustomField>