metadata/force-app/main/default/objects/Lead/fields/Email_Verification_Details__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification_Details__c</fullName>
    <description>BODEV-690: Display detailed results for email verification</description>
    <label>Email Verification Details</label>
    <type>TextArea</type>
</CustomField>