metadata/force-app/main/default/objects/Lead/fields/Est_Annual_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Revenue_Range__c</fullName>
    <description>BO-2220 Additional revenue fields on the Lead and Account objects</description>
    <inlineHelpText>Provides annual revenue range based on other revenue fields (Clearbit Annual Revenue/Clearbit Annual Revenue Range/Apollo Revenue)</inlineHelpText>
    <label>Est. Annual Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clearbit_Annual_Revenue_Range</valueSetName>
    </valueSet>
</CustomField>