metadata/force-app/main/default/objects/Lead/fields/FCR_Status_Last__c.field-meta.xml
<CustomField>
    <fullName>FCR_Status_Last__c</fullName>
    <description>wd field
Date/time when status was last updated</description>
    <label>Status Last Set</label>
    <type>Date</type>
</CustomField>