metadata/force-app/main/default/objects/Lead/fields/First_Activity_Channel__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_Channel__c</fullName>
    <label>First Activity Channel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>