metadata/force-app/main/default/objects/Lead/fields/First_Activity_excl_blanks__c.field-meta.xml
<CustomField>
    <fullName>First_Activity_excl_blanks__c</fullName>
    <formula>IF(AND(
CRMGAC__Total_Closed_Tasks__c&gt;0,
ISBLANK(First_Activity_Channel__c)),
&quot;Email&quot;,
(First_Activity_Channel__c))</formula>
    <label>First Activity  excl blanks</label>
    <type>Text</type>
</CustomField>