metadata/force-app/main/default/objects/Lead/fields/First_AE__c.field-meta.xml
<CustomField>
    <fullName>First_AE__c</fullName>
    <description>First assigned account executive. Mapped by process.</description>
    <label>First AE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>