metadata/force-app/main/default/objects/Lead/fields/First_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Lead_Owner__c</fullName>
    <description>First lead owner (excluding Bynder User, Leads and queues)</description>
    <inlineHelpText>First lead owner (excluding Bynder User, Leads and queues)</inlineHelpText>
    <label>First Lead Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>