metadata/force-app/main/default/objects/Lead/fields/First_Lead_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>First_Lead_Owner_Team__c</fullName>
    <description>It shows which BDR team first lead owner belongs to</description>
    <label>First Lead Owner BDR Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>