metadata/force-app/main/default/objects/Lead/fields/First_Lead_Owner_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>First_Lead_Owner_Timestamp__c</fullName>
    <description>Maps the time at which a lead is assigned to a user.</description>
    <label>Timestamp First Lead Owner</label>
    <type>DateTime</type>
</CustomField>