metadata/force-app/main/default/objects/Lead/fields/G2Crowd__G2_UUID__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd__G2_UUID__c</fullName>
    <externalId>true</externalId>
    <label>G2 UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>