metadata/force-app/main/default/objects/Lead/fields/GDPR_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR Opt-in</label>
    <type>Checkbox</type>
</CustomField>