metadata/force-app/main/default/objects/Lead/fields/Gong__Engage_Flow_Owner__c.field-meta.xml
<CustomField>
    <fullName>Gong__Engage_Flow_Owner__c</fullName>
    <label>Engage Flow Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>