metadata/force-app/main/default/objects/Lead/fields/Gong__Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Gong__Flow_Status__c</fullName>
    <label>Engage Flow Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Removed Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>