metadata/force-app/main/default/objects/Lead/fields/Ideal_Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Customer_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used by BDRs for lead qualification</description>
    <inlineHelpText>Field used by BDRs for lead qualification</inlineHelpText>
    <label>Ideal Customer Profile</label>
    <type>Checkbox</type>
</CustomField>