metadata/force-app/main/default/objects/Lead/fields/Ignore_Leandata__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Leandata__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to bypass Lean data and manually assign a Sales Qualified lead</description>
    <inlineHelpText>Check this to bypass Lean data and manually assign a Sales Qualified lead</inlineHelpText>
    <label>Ignore Leandata</label>
    <type>Checkbox</type>
</CustomField>