metadata/force-app/main/default/objects/Lead/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <inlineHelpText>What would be the impact of a solution for these pain points? Which effect or added value would this have?</inlineHelpText>
    <label>Impact</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>