metadata/force-app/main/default/objects/Lead/fields/Industry_from_Form__c.field-meta.xml
<CustomField>
    <fullName>Industry_from_Form__c</fullName>
    <label>Industry from Form (Deprecated)</label>
    <type>TextArea</type>
</CustomField>