metadata/force-app/main/default/objects/Lead/fields/Industry_from_G2Crowd__c.field-meta.xml
<CustomField>
    <fullName>Industry_from_G2Crowd__c</fullName>
    <label>Industry from G2Crowd (Deprecated)</label>
    <type>TextArea</type>
</CustomField>