metadata/force-app/main/default/objects/Lead/fields/Industry_ICP__c.field-meta.xml
<CustomField>
    <fullName>Industry_ICP__c</fullName>
    <formula>IF(
AND(
OR(ISPICKVAL (Industry_Group__c, &quot;Technology&quot;),
ISPICKVAL (Industry_Group__c, &quot;Consumer Brands&quot;),
ISPICKVAL (Industry_Group__c, &quot;Finance and Insurance&quot;),
ISPICKVAL (Industry_Group__c, &quot;Healthcare&quot;),
ISPICKVAL (Industry_Group__c, &quot;Industrials&quot;))),

TRUE, FALSE)</formula>
    <label>Industry ICP</label>
    <type>Checkbox</type>
</CustomField>