metadata/force-app/main/default/objects/Lead/fields/Inferred_Country__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Country__c</fullName>
    <description>Webdam fields</description>
    <label>Inferred Country</label>
    <type>TextArea</type>
</CustomField>