metadata/force-app/main/default/objects/Lead/fields/Inferred_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Postal_Code__c</fullName>
    <description>Webdam fields</description>
    <label>Inferred Postal Code</label>
    <type>TextArea</type>
</CustomField>