metadata/force-app/main/default/objects/Lead/fields/Inferred_State_Region__c.field-meta.xml
<CustomField>
    <fullName>Inferred_State_Region__c</fullName>
    <description>webdam fields</description>
    <label>Inferred State Region (Deprecated)</label>
    <type>TextArea</type>
</CustomField>