metadata/force-app/main/default/objects/Lead/fields/Job_Area_New__c.field-meta.xml
<CustomField>
    <fullName>Job_Area_New__c</fullName>
    <label>Job Area - New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAM Management</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Marketing General</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>IT/ICT</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>